# melodious-plots

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
utils/: helper.py  my_variables.py  plot_and_predict.py  plotting.py
